--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
-.App {
+body {
+  background-color: #e9eaed;
+  font-family: 'Dosis', sans-serif;
+  min-height: 100vh;
+}
+.App{
+}
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +42,6 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
+
+
