--- a/src/index.css
+++ b/src/index.css
@@ -12,111 +12,111 @@ code {
     monospace;
 }
 
-* {
+/* * {
   box-sizing: border-box;
 }
 
 
 /* Header/logo Title */
-.header {
+/* .header {
   padding: 80px;
   text-align: center;
   background: #333;
   color: white;
-}
+} */
 
 /* Increase the font size of the heading */
-.header h1 {
+/* .header h1 {
   font-size: 40px;
-}
+} */
 
 /* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
-.navbar {
+/* .navbar {
   overflow: hidden;
   background-color: #333;
   position: sticky;
   position: -webkit-sticky;
   top: 0;
-}
+} */
 
 /* Style the navigation bar links */
-.navbar a {
+/* .navbar a {
   float: left;
   display: block;
   color: white;
   text-align: center;
   padding: 14px 20px;
   text-decoration: none;
-}
+} */
 
 
 /* Right-aligned link */
-.navbar a.right {
+/* .navbar a.right {
   float: right;
-}
+} */
 
 /* Change color on hover */
-.navbar a:hover {
+/* .navbar a:hover {
   background-color: #ddd;
   color: black;
-}
+} */
 
 /* Active/current link */
-.navbar a.active {
+/* .navbar a.active {
   background-color: #666;
   color: white;
-}
+} */
 
 /* Column container */
-.row {  
-  display: -ms-flexbox; /* IE10 */
+/* .row {  
+  display: -ms-flexbox; 
   display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
+  -ms-flex-wrap: wrap; 
   flex-wrap: wrap;
-}
+} */
 
 /* Create two unequal columns that sits next to each other */
 /* Sidebar/left column */
-.side {
-  -ms-flex: 30%; /* IE10 */
+/* .side {
+  -ms-flex: 30%; 
   flex: 30%;
   background-color: #f1f1f1;
   padding: 20px;
-}
+} */
 
 /* Main column */
-.main {   
-  -ms-flex: 70%; /* IE10 */
+/* .main {   
+  -ms-flex: 70%; 
   flex: 70%;
   background-color: white;
   padding: 20px;
-}
+} */
 
 /* Fake image, just for this example */
-.fakeimg {
+/* .fakeimg {
   background-color: #aaa;
   width: 100%;
   padding: 20px;
-}
+} */
 
 /* Footer */
-.footer {
+/* .footer {
   padding: 20px;
   text-align: center;
   background: #ddd;
-}
+} */
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 700px) {
+/* @media screen and (max-width: 700px) {
   .row {   
     flex-direction: column;
   }
-}
+} */
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
+/* @media screen and (max-width: 400px) {
   .navbar a {
     float: none;
     width: 100%;
   }
-}
+} */
