--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -8,16 +8,18 @@
 } */
 
 .headerMenu {
-    margin:0 0 10px 0;
+    margin-bottom:10px;
     color:#fafafa;
     display:flex;
     justify-content: space-between;
     align-items: baseline;
+    padding-top:24px;
+    padding-bottom:24px;
 }
 
 .headerMenu a{
     display:inline-block;
-    margin: 0 10px;
+    margin-right: 10px;
     text-decoration:none;
     font-size: 16px;
     letter-spacing:1.2px;
@@ -35,6 +37,7 @@
     position: sticky;
     position: -webkit-sticky;
     top: 0;
+    padding:0 12px;
 }
 .social {
     text-align: right;
