--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -2,7 +2,7 @@
   background: #333;
 }
 .hero .card{
-  padding: 80px;
+  padding: 80px 0;
   text-align: center;
   background: #333;
   color: white;
